--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,35 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+  @apply bg-white p-6 rounded shadow-md w-auto max-w-md
+}
+.title{
+  @apply text-xl text-[black] font-bold text-center mb-4
+}
+.searchContainer{
+  @apply flex gap-2 mb-4
+}
+input{
+  @apply flex-1 p-2 border border-gray-300 rounded text-black
+}
+.btn{
+  @apply p-2 bg-blue-600 text-white rounded hover:bg-blue-700
+}
+.err{
+  @apply text-red-600 mb-4
+}
+.cardContainer{
+  @apply bg-amber-100 p-4 rounded text-black shadow-lg
+}
+.stat{
+  @apply flex justify-between mb-2 font-bold
+}
+.pokemonSprite{
+  @apply mx-auto mb-2 shadow-lg size-[300px] bg-[white] bg-center bg-cover bg-[url('/bgpic.webp')]
+}
+.infoContainer{
+  @apply flex gap-2 items-center
+}
+
