--- a/app/globals.css
+++ b/app/globals.css
@@ -27,15 +27,25 @@ body {
 
 .container {
   @apply bg-white p-6 rounded shadow-md w-auto max-w-md
+
+
+
 }
 .title{
   @apply text-xl text-[black] font-bold text-center mb-4
 }
 .searchContainer{
-  @apply flex gap-2 mb-4
+  @apply flex flex-col gap-2 mb-4
+
+
+sm:flex-row
+
+  
 }
 input{
-  @apply flex-1 p-2 border border-gray-300 rounded text-black
+  @apply flex-1 p-2 border border-gray-300 rounded text-black w-auto
+
+
 }
 .btn{
   @apply p-2 bg-blue-600 text-white rounded hover:bg-blue-700
@@ -53,6 +63,11 @@ input{
   @apply mx-auto mb-2 shadow-lg size-[300px] bg-[white] bg-center bg-cover bg-[url('/bgpic.webp')]
 }
 .infoContainer{
-  @apply flex gap-2 items-center
-}
+  @apply flex gap-2 items-start flex-wrap
 
+  
+ 
+}
+.ability{
+  @apply bg-[white] px-2 shadow-md rounded-sm
+}
